# HyperVID

./: README.md
Prj-Android/app/: build.gradle
Prj-Android/app/src/androidTest/java/test/deploy/tvm/tvm_face/: ExampleInstrumentedTest.java
Prj-Android/app/src/main/: AndroidManifest.xml
Prj-Android/app/src/main/assets/vehicle_models/: reg.prototxt
Prj-Android/app/src/main/cpp/: CMakeLists.txt  native.cpp  vehicle_recg.cpp  vehicle_recg.h
Prj-Android/app/src/main/java/: recognition_VehicleRecognition.h
Prj-Android/app/src/main/java/recognition/: VehicleRecognition.java
Prj-Android/app/src/main/java/test/deploy/tvm/tvm_face/: MainActivity.java
Prj-Android/app/src/main/res/layout/: activity_main.xml
Prj-Android/app/src/main/res/values/: strings.xml
Prj-Android/app/src/test/java/test/deploy/tvm/tvm_face/: ExampleUnitTest.java
Prj-Cpp/: CMakeLists.txt  label.txt  mobilenet-ssd.cpp  vehicle_recg.cpp
Prj-Python/: label.txt  model_forward.py
Prj-Python/model/: vehicle_model.prototxt
